0.20.0
  * English help file has been added
  * Added translation for Italian
  * The field "Swap hi/low temperature" is moved to the "Units" tab
  * Added auto-switch to the next station on selected time
  * The arrows that switch to the next/previos station is made bigger, to press it with a finger
  * Fixed error: while station data xml file is absence, displaying weather data is garbage
  
0.19.3
  * Size of locations window on configuration dialog has been raised 
  * For OS2008 - accelerating of showing popup window

0.19.2
  * OS2008 compatibility  
  
0.19.1
  * Time of "Last update at server:" has been corrected
  * Finish, France and Russian translation has been updated 
  * Compatibility with OS2008 has been begun 
 
0.19
  * Hide buttons 'next station', 'previos station' when one station is used
  * Correct creating the cache directory
  * Now the selected tab in settings dialog is saved
  * Added possibility to hide station name with 'previos' and 'next' statons buttons
  * Added displaying sunrise and sunset time
  * Added full staions list for all available countrys on weather.com
  * Added menuitem in Home menu for call applet settings
  * The calculating of wind speed is corrected
  * Wind speed units: km/s, mi/s, m/h has been removed
  * Postinstall script in deb packet: It provide warning message for rebooting the device after installing applet
  * The code that forming list of countrys, regions and locations is fully  rewritten
  * Now if country have one region, it selected automatically
  * Fixed error: while read config, if upate interval is greater than 8 hours, then update interval always set to 'never'
  * Fixed error: after applet first start or after reboot the field 'Next update' is always never
  * The use libconic instead ooss-ic for version of OS2007
  * Long pressing on the applet have to call pop up menus with the list of cities for change of current city
  * Opportunity to change background color has been made